fix(styles): fix issues with mobile styles
Spefically:
  + Make text in main properly wrap via hypenation,
  + Force dates in archive to have enough width to not wrap (and add extra padding when colliding with the article name)

--- a/src/styles/base/_web.scss
+++ b/src/styles/base/_web.scss
@@ -1,4 +1,5 @@
 main {
     text-align: left;
     text-align: justify;
+    hyphens: auto;
 }
